# gad-sdk

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  install.sh  setup.py
.github/workflows/: Build_docs.yml  Pypi-package.yml  build_docs.yml  cmake.yml  msbuild.yml  python.yml
EthernetSendTest/: EthernetSendTest.cpp  EthernetSendTest.vcxproj  EthernetSendTest.vcxproj.filters
EthernetSendTest/x64/Debug/: vc142.idb
EthernetSendTest/x64/Debug/EthernetSendTest.tlog/: EthernetSendTest.lastbuildstate
EthernetSendTest/x64/Release/: EthernetSendTest.exe.recipe  EthernetSendTest.iobj  EthernetSendTest.ipdb
EthernetSendTest/x64/Release/EthernetSendTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EthernetSendTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: gal-c-config.cmake  gal-cpp-config.cmake  oxts-sdk-gal-cpp-config.cmake  sdk-management.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py  custom.css  index.rst  make.bat
docs_sphinx/gal-cpp/: gal-cpp_gad.rst  index.rst
docs_sphinx/longform/: Sensorcharacterisation.rst  advanced-commands.rst  advancedcommands.rst  all-options.rst  data-rates.rst  debugging.rst  defining-a-local-reference-frame.rst  estimating-errors.rst  example-heading.rst  example-my-first-gad.rst  example-static-aiding-no-boost.rst  example-static-aiding.rst  example-zv-wheelspeed.rst  gad-files.rst  generic-aiding-attitude-updates.rst  generic-aiding-heading-updates.rst  generic-aiding-position-updates.rst  generic-aiding-requirements.rst  generic-aiding-speed-updates.rst  generic-aiding-velocity-updates.rst  intro.rst  is-my-data-being-received.rst  ncom-updates  ncom-updates.rst  position-only-initialisation.rst  reassigning-traditional-sources.rst  sensorcharacterisation.rst  stream-priority.rst  timestamps.rst
docs_sphinx/longform/assets/: gad-file-blended-options.csv  gad-file-format.csv  option-gpsatt.csv  option-primary-gnss-lva.csv  options-all.csv
docs_sphinx/source/: index.rst
docs_sphinx/source/longform/: Frames.rst  GAD_cols.rst  GAD_post_processing.rst  Glossary.rst  KF.rst  adv_com.rst  cov.rst  enum_tab.rst  example_can_ws.rst  gettingstarted.rst  intro.rst  ismydatabeingreceived.rst  lever_arm.rst  my_first_gad.rst  overview.rst  py_com.rst  section5.rst  static_aiding.rst  time_stamping.rst
docs_sphinx/source/longform/aiding_types/: att.rst  hea.rst  index.rst  pos.rst  spe.rst  vel.rst
docs_sphinx/source/longform/assets/: Bumpy_egg.tif  Bumpy_egg2.tif  gad-commands.csv  gad-file-enums.csv  gad-file-format.csv  python_commands.csv
docs_sphinx/source/longform/gal-cpp/: gal-cpp_gad.rst
examples/: CMakeLists.txt
examples/gal/: CMakeLists.txt  heading.cpp  my-first-gad.cpp  oxts_sleep.hpp  static-aiding-no-boost.cpp  static-aiding.cpp  time-initialisation-example.cpp  time-sync-example.cpp  zero-velocity-wheelspeed.cpp
examples/ncom/: CMakeLists.txt  ncom_to_csv.c
examples/python/: my_first_gad.py  static_aiding.py
oxts-sdk-core/: CMakeLists.txt
oxts-sdk-core/cmake/: oxts-sdk-core-config.cmake
oxts-sdk-core/include/oxts/core/: BasicCasts.h  Lib_Compiler.h  Lib_Detect.h  ccomtx.h  version.h
oxts-sdk-core/src/: BasicCasts.c  Lib_Compiler.c  ccomtx.cpp  errors.c
oxts-sdk-gad/: CMakeLists.txt
oxts-sdk-gad/include/oxts/: gad_encode.h  gad_struct.h
oxts-sdk-gad/src/: decode_genaid.c  gad_encode.c  gad_struct.c
oxts-sdk-gal/: CMakeLists.txt
oxts-sdk-gal-c/: CMakeLists.txt  README.md
oxts-sdk-gal-c/cmake/: oxts-sdk-gal-c-config.cmake
oxts-sdk-gal-c/include/oxts/gal-c/: BasicCasts.h  BasicTypes.h  Lib_Compiler.h  Lib_Detect.h  ccomtx.h  errors.h  gad_decode.h  gad_defines.h  gad_encode.h  gad_encode_bin.h  gad_encode_csv.h  gad_include_all.h  gad_struct.h  oxts_misra.h  oxts_pointers.h  version.h
oxts-sdk-gal-c/src/: BasicCasts.c  Lib_Compiler.c  ccomtx.c  errors.c  gad_decode.c  gad_encode.c  gad_encode_bin.c  gad_encode_csv.c  gad_struct.c  oxts_pointers.c
oxts-sdk-gal-cpp/: CMakeLists.txt
oxts-sdk-gal-cpp/cmake/: oxts-sdk-gal-cpp-config.cmake
oxts-sdk-gal-cpp/include/oxts/gal-cpp/: Lib_Detect.hpp  basic_casts.hpp  basic_types.hpp  ccomtx.hpp  config.h.in  gad.hpp  gad_defines.hpp  gad_encoder.hpp  gad_encoder_bin.hpp  gad_encoder_csv.hpp  gad_handler.hpp  gad_output.hpp  gad_output_file.hpp  gad_output_udp.hpp  gad_struct.hpp  oxts_arrays.hpp  oxts_misra.hpp  oxts_sockets.hpp  udp_server_client.hpp
oxts-sdk-gal-cpp/include/oxts/gal-cpp/gad_encoders/: gad_encoder.hpp  gad_encoder_bin.hpp  gad_encoder_csv.hpp
oxts-sdk-gal-cpp/include/oxts/gal-cpp/gad_output/: gad_output.hpp  gad_output_file.hpp  gad_output_udp.hpp
oxts-sdk-gal-cpp/src/gal-cpp/: basic_casts.cpp  ccomtx.cpp  gad.cpp  gad_encoder_bin.cpp  gad_encoder_csv.cpp  gad_handler.cpp  gad_output.cpp  oxts_sockets.cpp
oxts-sdk-gal/include/oxts/gal/: gad_decode.h  gad_defines.h  gad_include_all.h  gad_struct.h
oxts-sdk-gal/include/oxts/gal-cpp/: gad.h  gad.hpp
oxts-sdk-gal/lib/oxts/gal-c/: CMakeLists.txt
oxts-sdk-gal/lib/oxts/gal-c/include/oxts/gal-c/: gad_include_all.h  gad_struct.h
oxts-sdk-gal/lib/oxts/gal-c/lib/common/: CMakeLists.txt
oxts-sdk-gal/lib/oxts/gal-c/lib/common/include/oxts/common/: BasicCasts.h  BasicTypes.h  Lib_Compiler.h  ccomtx.h  errors.h
oxts-sdk-gal/lib/oxts/gal-c/lib/common/src/: BasicCasts.c  Lib_Compiler.c  ccomtx.cpp  errors.c
oxts-sdk-gal/lib/oxts/gal-c/src/: gad_decode.c  gad_encode.c  gad_struct.c
oxts-sdk-gal/src/gal/: decode_genaid.c  gad_decode.c  gad_encode.c  gad_struct.c
oxts-sdk-gal/src/gal-cpp/: gad.cpp
oxts-sdk-py/: CMakeLists.txt  gal-py-bindings.cpp
oxts_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: CMakeLists.txt  gad_test.cpp  pybind_test.py
